--- a/src/resource/views/components/course-component/unit-component/unit-component.hbs
+++ b/src/resource/views/components/course-component/unit-component/unit-component.hbs
@@ -22,7 +22,7 @@
         <div class="page-main">
             <div class="page-main--header d-flex align-items-center justify-content-between">
                 <h2 class="header-title">Chương học hiện có</h2>
-                <a class="header-router-link-detail">
+                <a class="header-router-link-detail" href="/web/course/unit/detail?type=create">
                     <i class="fa fa-plus mr-2" aria-hidden="true"></i>
                     Thêm mới
                 </a>
