--- a/src/resource/views/components/course-component/unit-component/unit-detail-component.hbs
+++ b/src/resource/views/components/course-component/unit-component/unit-detail-component.hbs
@@ -12,64 +12,67 @@
     <div class="container">
         <div class="breadcrumd">
             <ul class="list-unstyled">
-                <li><a href="/home">Trang chủ</a></li>
-                <li><a href="/courses">Khóa học</a></li>
-                <li><a class="go-back">Chương học</a></li>
+                <li><a href="/web">Trang chủ</a></li>
+                <li><a href="/web/course">Khóa học</a></li>
+                <li><a href="/web/course/unit">Chương học</a></li>
                 <li><span>Chi tiết</span></li>
             </ul>
         </div>
         <div class="page-detail">
-            <h2 class="page-detail--title">Thông tin khóa học</h2>
-            <form class="page-detail-form" id="unit-detail">
+            <div class="title-information">
+                <h2 class="information-title">Thông tin khóa học</h2>
+                <div class="custom-control custom-switch information-status" id="switched">
+                    <input type="checkbox" class="custom-control-input" id="Status">
+                    <label class="custom-control-label" for="Status">Trạng thái</label>
+                </div>
+            </div>
+
+            <form class="page-detail-form" id="Unit">
                 <div class="row">
                     <div class="col-6">
                         <div class="form-group">
-                            <label class="form-group--label" for="course-code">Mã khóa học</label>
-                            <input type="text" class="form-control" id="course-code" disabled placeholder="Mã code">
+                            <label class="form-group--label" for="Code">Mã khóa học</label>
+                            <input type="text" class="form-control" id="Code" disabled>
                             <span class="form-message"></span>
                         </div>
                         <div class="form-group">
-                            <label class="form-group--label" for="unit-name">Tên Chương học</label>
-                            <input type="text" class="form-control" id="unit-name">
+                            <label class="form-group--label" for="Name">Tên Chương học</label>
+                            <input type="text" class="form-control" id="Name">
                             <span class="form-message"></span>
                         </div>
                         <div class="form-group">
-                            <label class="form-group--label" for="unit-lesson">Số bài giảng hiện có</label>
-                            <input type="text" class="form-control" id="unit-lesson" disabled>
+                            <label class="form-group--label" for="Lesson">Số bài giảng hiện có</label>
+                            <input type="text" class="form-control" id="Lesson" disabled>
                             <span class="form-message"></span>
                         </div>
                     </div>
                     <div class="col-6">
                         <div class="form-group">
-                            <label class="form-group--label" for="unit-status">Trạng thái</label>
-                            <div class="form-group-radio">
-                                <div class="custom-control custom-radio custom-control-inline">
-                                    <input type="radio" id="active" name="status" value="action"
-                                        class="custom-control-input">
-                                    <label class="custom-control-label" for="active">Active</label>
-                                </div>
-                                <div class="custom-control custom-radio custom-control-inline">
-                                    <input type="radio" id="no-active" name="status" value="no-action"
-                                        class="custom-control-input">
-                                    <label class="custom-control-label" for="no-active">No-active</label>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="form-group--label" for="unit-create-date">Ngày tạo</label>
-                            <input type="datetime-local" step="0.001" class="form-control" id="unit-create-date">
+                            <label class="form-group--label" for="Author">Tác giả</label>
+                            <input type="text" class="form-control" id="Author">
                             <span class="form-message"></span>
                         </div>
                         <div class="form-group">
-                            <label class="form-group--label" for="unit-edit-last-date">Cập nhật gần đây</label>
-                            <input type="datetime-local" step="0.001" class="form-control" id="unit-edit-last-date">
+                            <label class="form-group--label" for="CreateDate">Ngày tạo</label>
+                            <input type="datetime-local" step="0.001" class="form-control" id="CreateDate" disabled>
+                            <span class="form-message"></span>
+                        </div>
+                        <div class="form-group">
+                            <label class="form-group--label" for="UpdateDate">Cập nhật gần đây</label>
+                            <input type="datetime-local" step="0.001" class="form-control" id="UpdateDate" disabled>
+                            <span class="form-message"></span>
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <div class="form-group">
+                            <label class="form-group--label" for="Description">Mô tả học phần</label>
+                            <textarea class="description" id="Description" rows="4" cols="50"></textarea>
                             <span class="form-message"></span>
                         </div>
                     </div>
                 </div>
                 <div class="users-detail--serect">
                     <button type="submit" class="btn-executed btn">Submit</button>
-                    <button type="button" id="come-back" class="btn">Quay lại</button>
                 </div>
             </form>
         </div>
