#Commit 12/06/2022: Refactor Template - API - Middleware - Controller Unit - Lesson.

--- a/src/resource/views/components/course-component/unit-component/unit-component.hbs
+++ b/src/resource/views/components/course-component/unit-component/unit-component.hbs
@@ -15,7 +15,7 @@
             <ul class="list-unstyled">
                 <li><a href="/web">Trang chủ</a></li>
                 <li><a href="/web/course">Khóa học</a></li>
-                <li><span>Học phần</span></li>
+                <li><span>Chương học</span></li>
             </ul>
         </div>
 
@@ -34,9 +34,6 @@
             <div class="undefine-data" id="Blank-data">Không có nội dung phù hợp</div>
         </div>
     </div>
-    <nav aria-label="Page navigation example">
-        <ul class="pagination d-flex align-items-center justify-content-center"></ul>
-    </nav>
 
     <script type="module" src="/static/js/unit/unit.js"></script>
 </body>
