--- a/src/resource/views/components/course-component/lesson-component/lesson-component.hbs
+++ b/src/resource/views/components/course-component/lesson-component/lesson-component.hbs
@@ -13,9 +13,9 @@
     <div class="container-fluid">
         <div class="breadcrumd">
             <ul class="list-unstyled">
-                <li><a href="/home">Trang chủ</a></li>
-                <li><a href="/courses">Khóa học</a></li>
-                <li><a id="go-back">Chương học</a></li>
+                <li><a href="/web">Trang chủ</a></li>
+                <li><a href="/web/course">Khóa học</a></li>
+                <li><a href="/web/course/unit">Chương học</a></li>
                 <li><span>Học phần</span></li>
             </ul>
         </div>
@@ -23,23 +23,17 @@
         <div class="page-main">
             <div class="page-main--header d-flex align-items-center justify-content-between">
                 <h2 class="header-title">Chương học hiện có</h2>
-                <a class="header-router-link-detail" id="lesson-new">
-                    <i class="fa fa-plus mr-2" aria-hidden="true"></i>
-                    Thêm mới
+                <a class="header-router-link-detail" id="lesson-new" href="/web/course/unit/lesson/detail?type=create">
+                    <i class="fa fa-plus mr-2" aria-hidden="true"></i>Thêm mới
                 </a>
             </div>
             <table class="page-main-body table">
-                <thead class="thead-dark">
-                    <tr id="lesson-table-header"></tr>
-                </thead>
-                <tbody id="lesson-table-body"></tbody>
+                <thead class="thead-dark"><tr id="Header"></tr></thead>
+                <tbody id="Body"></tbody>
             </table>
-            <div class="undefine-data">Không có nội dung phù hợp</div>
+            <div class="undefine-data" id="Blank-data">Không có nội dung phù hợp</div>
         </div>
     </div>
-    <nav aria-label="Page navigation example">
-        <ul class="pagination d-flex align-items-center justify-content-center"></ul>
-    </nav>
 
     <script type="module" src="/static/js/lesson/lesson.js"></script>
 </body>
