#Commit 12/06/2022: Refactor Template - API - Middleware - Controller.

--- a/src/resource/views/components/course-component/lesson-component/lesson-detail-component.hbs
+++ b/src/resource/views/components/course-component/lesson-component/lesson-detail-component.hbs
@@ -20,7 +20,7 @@
                 <li><span>Chi tiết học phần</span></li>
             </ul>
         </div>
-        <div class="page-detail">
+        <div class="page-detail mb-5">
             <div class="title-information">
                 <h2 class="information-title">Thông tin khóa học</h2>
                 <div class="custom-control custom-switch information-status" id="switched">
@@ -57,7 +57,7 @@
                     </div>
                     <div class="col-12">
                         <div class="form-group">
-                            <label class="form-group--label" for="lesson-content">Nội dung khóa học</label>
+                            <label class="form-group--label" for="Content">Nội dung khóa học</label>
                             <textarea id="Textarea"></textarea>
                             <span class="form-message"></span>
                         </div>
