#Commit 13/06/2022: Refactor Template - API - Middleware - Controller.

--- a/src/resource/views/components/user-component/user-detail-component.hbs
+++ b/src/resource/views/components/user-component/user-detail-component.hbs
@@ -55,9 +55,10 @@
                             <label class="title--input" for="Role">Loại tài khoản</label>
                             <select class="custom-select" id="Role">
                                 <option selected value="default">Quyền tài khoản</option>
-                                <option value="user">Khách hàng</option>
-                                <option value="member">Học viên</option>
-                                <option value="admin">Quản trị</option>
+                                <option value="Admin">Quản trị</option>
+                                <option value="Client">Khách hàng</option>
+                                <option value="Editer">Biên tập</option>
+                                <option value="Student">Học viên</option>
                             </select>
                             <span class="form-message"></span>
                         </div>
