#Commit 14/06/2022: Add Recycle bin - refactor template page user API - Template.

--- a/src/resource/views/partials/header.hbs
+++ b/src/resource/views/partials/header.hbs
@@ -10,6 +10,10 @@
 </head>
 
 <body>
+    <div class="permission" id="permission">
+        Permission
+    </div>
+
     <header>
         <div class="header-wrapper">
             <div class="container-fluid">
