--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -43,6 +43,25 @@
       .sliders-component ul li a:hover {
         text-decoration: none; }
 
+.permission {
+  background-color: #f28d0f;
+  color: #ffffff;
+  left: 0px;
+  top: 25px;
+  text-align: center;
+  position: fixed;
+  padding: 5px 0px;
+  width: 100%;
+  z-index: 100; }
+  .permission.active {
+    animation: show-permission 1.1s ease forwards; }
+
+@keyframes show-permission {
+  0% {
+    top: 25px; }
+  100% {
+    top: 60px; } }
+
 .document-component .component-items {
   margin-bottom: 30px;
   overflow: hidden;
@@ -312,37 +331,6 @@ form .form-group .password-control {
   vertical-align: middle; }
   .table tbody td .btn a {
     color: #ffffff; }
-
-.modal-toasts {
-  background-color: #031b3d;
-  display: none;
-  align-items: center;
-  justify-content: center;
-  min-height: 45px;
-  top: 108px;
-  right: 0px;
-  position: fixed;
-  padding: 5px 10px;
-  min-width: 150px;
-  z-index: 2000;
-  animation: showToasts 1.1s ease forwards;
-  transition: all .2s ease; }
-  .modal-toasts .content {
-    color: #ffffff;
-    font-size: 14px;
-    margin-bottom: 0px;
-    text-transform: capitalize; }
-
-.modal-toasts.active {
-  display: flex; }
-
-@keyframes showToasts {
-  0% {
-    opacity: 0;
-    transform: translateX(200px); }
-  100% {
-    opacity: 1;
-    transform: translateX(0px); } }
 
 footer {
   background-color: #031b3d;
