--- a/src/resource/scss/app.scss
+++ b/src/resource/scss/app.scss
@@ -6,8 +6,6 @@
 }
 
 .home_title {
-    // background-color: $red-color;
-    // color: $red-color;
     font-size: 30px;
     font-weight: bold;
     letter-spacing: .2px;
@@ -55,6 +53,31 @@
                 }
             }
         }
+    }
+}
+
+// PERMISSION
+.permission {
+    background-color: #f28d0f;
+    color: #ffffff;
+    left: 0px;
+    top: 25px;
+    text-align: center;
+    position: fixed;
+    padding: 5px 0px;
+    width: 100%;
+    z-index: 100;
+    &.active {
+        animation: show-permission 1.1s ease forwards;
+    }
+}
+
+@keyframes show-permission {
+    0% {
+        top: 25px;
+    }
+    100% {
+        top: 60px;
     }
 }
 
@@ -429,42 +452,42 @@ form {
 }
 
 // TOASTS
-.modal-toasts {
-    background-color: #031b3d;
-    display: none;
-    align-items: center;
-    justify-content: center;
-    min-height: 45px;
-    top: 108px;
-    right: 0px;
-    position: fixed;
-    padding: 5px 10px;
-    min-width: 150px;
-    z-index: 2000;
-    animation: showToasts 1.1s ease forwards;
-    transition: all .2s ease;
-    .content {
-        color: #ffffff;
-        font-size: 14px;
-        margin-bottom: 0px;
-        text-transform: capitalize;
-    }
-}
+// .modal-toasts {
+//     background-color: #031b3d;
+//     display: none;
+//     align-items: center;
+//     justify-content: center;
+//     min-height: 45px;
+//     top: 108px;
+//     right: 0px;
+//     position: fixed;
+//     padding: 5px 10px;
+//     min-width: 150px;
+//     z-index: 2000;
+//     animation: showToasts 1.1s ease forwards;
+//     transition: all .2s ease;
+//     .content {
+//         color: #ffffff;
+//         font-size: 14px;
+//         margin-bottom: 0px;
+//         text-transform: capitalize;
+//     }
+// }
 
-.modal-toasts.active {
-    display: flex;
-}
+// .modal-toasts.active {
+//     display: flex;
+// }
 
-@keyframes showToasts {
-    0% {
-        opacity: 0;
-        transform:  translateX(200px);
-    }
-    100% {
-        opacity: 1;
-        transform:  translateX(0px);
-    }
-}
+// @keyframes showToasts {
+//     0% {
+//         opacity: 0;
+//         transform:  translateX(200px);
+//     }
+//     100% {
+//         opacity: 1;
+//         transform:  translateX(0px);
+//     }
+// }
 
 // FOOTER
 footer {
