--- a/src/resource/views/components/user-component/user-recycle-component.hbs
+++ b/src/resource/views/components/user-component/user-recycle-component.hbs
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,28 +7,16 @@
     <title>Document</title>
     <link rel="stylesheet" href="/static/css/users.css">
 </head>
-
 <body>
-    <div class="container-fluid">
+    <div class="container">
         <div class="breadcrumd">
             <ul class="list-unstyled">
                 <li><a href="/web">Trang chủ</a></li>
-                <li><span>Thông tin quản trị</span></li>
+                <li><a href="/web/user">Thông tin quản trị</a></li>
+                <li><span>Chi tiết</span></li>
             </ul>
         </div>
-
         <div class="page-main">
-            <div class="page-main--header d-flex align-items-center">
-                <h3 class="header-title">Thông tin quản trị viên</h3>
-                <a class="header-router-link-detail ml-auto mr-2" href="/web/user/detail?type=create">
-                    <i class="fa fa-plus mr-2" aria-hidden="true"></i>
-                    Thêm mới
-                </a>
-                <a class="header-router-link-detail" href="/web/user/recycle?type=user">
-                    <i class="fa fa-recycle mr-2" aria-hidden="true"></i>
-                    Sọt rác
-                </a>
-            </div>
             <table class="page-main-body table">
                 <thead class="thead-dark">
                     <tr id="Header"></tr>
@@ -40,7 +27,6 @@
         </div>
     </div>
 
-    <script type="module" src="/static/js/user/user.js"></script>
+    <script type="module" src="/static/js/lib/recycle.js"></script>
 </body>
-
 </html>
