--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -139,6 +139,14 @@ form .form-group .password-control {
     font-weight: 700;
     margin-bottom: 10px;
     padding: 10px; }
+  .page-main .page-main--header .header-btn {
+    border-radius: 5px;
+    background-color: #f28d0f;
+    color: white;
+    cursor: pointer;
+    font-weight: 700;
+    margin-bottom: 10px;
+    padding: 10px; }
   .page-main .page-main-body {
     margin-bottom: 0px; }
     .page-main .page-main-body .thead-dark {
