--- a/src/resource/scss/app.scss
+++ b/src/resource/scss/app.scss
@@ -187,6 +187,15 @@ form {
             margin-bottom: 10px;
             padding: 10px;
         }
+        .header-btn {
+            border-radius: 5px;
+            background-color: #f28d0f;
+            color: white;
+            cursor: pointer;
+            font-weight: 700;
+            margin-bottom: 10px;
+            padding: 10px;
+        }
     }
     .page-main-body {
         margin-bottom: 0px;
