--- a/src/resource/scss/app.scss
+++ b/src/resource/scss/app.scss
@@ -187,14 +187,17 @@ form {
             margin-bottom: 10px;
             padding: 10px;
         }
-        .header-btn {
+        .recycle-btn {
             border-radius: 5px;
             background-color: #f28d0f;
             color: white;
             cursor: pointer;
+            display: none;
             font-weight: 700;
-            margin-bottom: 10px;
             padding: 10px;
+            &.active {
+                display: inline-block;
+            }
         }
     }
     .page-main-body {
