--- a/src/resource/views/components/common-component/recycle-component.hbs
+++ b/src/resource/views/components/common-component/recycle-component.hbs
@@ -17,9 +17,9 @@
             </ul>
         </div>
         <div class="page-main">
-            <div class="page-main--header d-flex align-items-center">
+            <div class="page-main--header d-flex align-items-center mb-3">
                 <h3 class="header-title">Thông tin quản trị viên</h3>
-                <a class="header-btn ml-auto" id="restore" disabled="true">Phục hồi</a>
+                <a class="recycle-btn ml-auto" id="restore">Phục hồi</a>
             </div>
             <table class="page-main-body table">
                 <thead class="thead-dark">
