#Commit 17/06/2022: Refactor Render view - Delete - Permission - Controller - Middleware - Controller page course - user.

--- a/src/resource/views/components/common-component/recycle-component.hbs
+++ b/src/resource/views/components/common-component/recycle-component.hbs
@@ -12,7 +12,7 @@
         <div class="breadcrumd">
             <ul class="list-unstyled">
                 <li><a href="/web">Trang chủ</a></li>
-                <li><a href="/web/user">Thông tin quản trị</a></li>
+                <li><a href="#" id="breadcrumd-roll-page">Title</a></li>
                 <li><span>Sọt rác</span></li>
             </ul>
         </div>
