--- a/src/resource/views/components/course-component/course-component.hbs
+++ b/src/resource/views/components/course-component/course-component.hbs
@@ -18,18 +18,20 @@
         </div>
 
         <div class="page-main">
-            <div class="page-main--header d-flex align-items-center justify-content-between">
-                <h2 class="header-title">Danh mục khóa học</h2>
-                <a class="header-router-link-detail" href="/web/course/detail?type=create">
-                    <i class="fa fa-plus mr-2" aria-hidden="true"></i>
-                    Thêm mới
+            <div class="page-main--header d-flex align-items-center">
+                <h3 class="header-title">Danh mục khóa học</h3>
+                <a class="header-router-link-detail ml-auto mr-2" href="/web/course/detail?type=create">
+                    <i class="fa fa-plus mr-2" aria-hidden="true"></i>Thêm mới
+                </a>
+                <a class="header-router-link-detail" href="/web/course/recycle?type=course">
+                    <i class="fa fa-recycle mr-2" aria-hidden="true"></i>Sọt rác
                 </a>
             </div>
             <table class="page-main-body table">
                 <thead class="thead-dark"><tr id="Header"></tr></thead>
                 <tbody id="Body"></tbody>
             </table>
-            <div class="undefine-data" id="Blank-data">Không có nội dung phù hợp</div>
+            <div class="undefine-data" id="Blank">Không có nội dung phù hợp</div>
         </div>
     </div>
     <nav aria-label="Page navigation example">
