#Commit 18/06/2022: Refactor page Unit about Template - Script - API - Middleware - Controller.

--- a/src/resource/views/components/course-component/unit-component/unit-component.hbs
+++ b/src/resource/views/components/course-component/unit-component/unit-component.hbs
@@ -25,7 +25,7 @@
                 <a class="header-router-link-detail ml-auto mr-2" href="/web/course/unit/detail?type=create">
                     <i class="fa fa-plus mr-2" aria-hidden="true"></i>Thêm mới
                 </a>
-                <a class="header-router-link-detail" href="/web/course/recycle?type=course">
+                <a class="header-router-link-detail" href="/web/course/unit/recycle?type=unit">
                     <i class="fa fa-recycle mr-2" aria-hidden="true"></i>Sọt rác
                 </a>
             </div>
