#Commit 19/06/2022: Refactor Template - API - Middleware - Controller page Client.

--- a/src/resource/views/components/client-component/client-component.hbs
+++ b/src/resource/views/components/client-component/client-component.hbs
@@ -21,15 +21,14 @@
             <div class="page-main--header d-flex align-items-center justify-content-between">
                 <h2 class="header-title">Thành viên đăng ký</h2>
                 <a class="header-router-link-detail" href="/web/client/detail?type=create">
-                    <i class="fa fa-plus mr-2" aria-hidden="true"></i>
-                    Thêm mới
+                    <i class="fa fa-plus mr-2" aria-hidden="true"></i>Thêm mới
                 </a>
             </div>
             <table class="page-main-body table">
                 <thead class="thead-dark"><tr id="Header"></tr></thead>
                 <tbody id="Body"></tbody>
             </table>
-            <div class="undefine-data" id="Blank-data">Không có nội dung phù hợp</div>
+            <div class="undefine-data" id="Blank">Không có nội dung phù hợp</div>
         </div>
     </div>
     <nav aria-label="Page navigation example">
