--- a/src/resource/views/components/client-component/client-component.hbs
+++ b/src/resource/views/components/client-component/client-component.hbs
@@ -18,10 +18,13 @@
         </div>
 
         <div class="page-main">
-            <div class="page-main--header d-flex align-items-center justify-content-between">
+            <div class="page-main--header d-flex align-items-center">
                 <h2 class="header-title">Thành viên đăng ký</h2>
-                <a class="header-router-link-detail" href="/web/client/detail?type=create">
+                <a class="header-router-link-detail ml-auto mr-2" href="/web/client/detail?type=create">
                     <i class="fa fa-plus mr-2" aria-hidden="true"></i>Thêm mới
+                </a>
+                <a class="header-router-link-detail" href="/web/client/recycle?type=client">
+                    <i class="fa fa-recycle mr-2" aria-hidden="true"></i>Sọt rác
                 </a>
             </div>
             <table class="page-main-body table">
